lidarr/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lidarr
  labels:
    istio-injection: enabled
