lidarr/lidarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: lidarr
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8686
  selector:
    app: lidarr
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: lidarr
spec:
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      containers:
      - name: lidarr
        image: linuxserver/lidarr:0.7.1.1381-ls3
        ports:
        - containerPort: 8686
          name: http
        volumeMounts:
        - name: music
          mountPath: /music
        - name: config
          mountPath: /config
        - name: whatbox
          mountPath: /mnt/whatbox
      volumes:
      - name: whatbox
        persistentVolumeClaim:
          claimName: whatbox
          readOnly: true
      - name: music
        persistentVolumeClaim:
          claimName: music
      - name: config
        persistentVolumeClaim:
          claimName: config
