lidarr/service-entries.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: neptune.whatbox.ca
  namespace: lidarr
spec:
  hosts:
  - neptune.whatbox.ca
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dippystreams.co.uk
  namespace: lidarr
spec:
  hosts:
  - dippystreams.co.uk
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: api.pushbullet.com
  namespace: lidarr
spec:
  hosts:
  - api.pushbullet.com
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: plex.tv
  namespace: lidarr
spec:
  hosts:
  - plex.tv
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: api.lidarr.audio
  namespace: lidarr
spec:
  hosts:
  - api.lidarr.audio
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: www.theaudiodb.com
  namespace: lidarr
spec:
  hosts:
  - www.theaudiodb.com
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: services.lidarr.audio
  namespace: lidarr
spec:
  hosts:
  - services.lidarr.audio
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: coverartarchive.org
  namespace: lidarr
spec:
  hosts:
  - coverartarchive.org
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
# https://istio.io/docs/tasks/traffic-management/egress/wildcard-egress-hosts/#configure-direct-traffic-to-a-wildcard-host
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: archive.org
  namespace: lidarr
spec:
  hosts:
  - archive.org
  - "*.archive.org"
  exportTo:
  - "."
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: tls
    protocol: TLS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: assets.fanart.tv
  namespace: lidarr
spec:
  hosts:
  - assets.fanart.tv
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
