lidarr/virtual-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: lidarr
  namespace: lidarr
spec:
  hosts:
  - lidarr.lukeaddison.co.uk
  gateways:
  - istio-system/istio-ingressgateway-internal
  http:
  - match:
    - port: 8080
    route:
    - destination:
        host: lidarr
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: lidarr-api
  namespace: lidarr
spec:
  hosts:
  - api.lidarr.lukeaddison.co.uk
  gateways:
  - istio-system/istio-ingressgateway
  http:
  - match:
    - port: 8443
      uri:
        prefix: /api
    route:
    - destination:
        host: lidarr
